--- a/index.html
+++ b/index.html
@@ -250,33 +250,12 @@
   <section class="target_section layout_padding2">
     <div class="container">
         <div class="detail-boxx">
-          <h3>Work with me! </h3>
+          <h3>Words of happy costumers</h3>
         </div>
     </div>
   </section>
   <!-- end target section -->
 
-  <!-- contact section -->
-  <section class="responsive-section">
-    <div class="box_order">
-      <h2>Box 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <a href="#" class="order-button">Order</a>
-    </div>
-
-    <div class="box_order">
-      <h2>Box 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <a href="#" class="order-button">Order</a>
-    </div>
-
-    <div class="box_order">
-      <h2>Box 3</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <a href="#" class="order-button">Order</a>
-    </div>
-  </section>
-  <!-- end contact section -->
 
   <!-- client section -->
   <section class="client_section">
